Change cloud provider to resource provider
